--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-datasource": "1.0.9",
     "vue-echarts": "^2.4.0",
     "vue-quill-editor": "2.1.6",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
     "vue-schart": "^0.1.2",
     "vue-simplemde": "0.3.8"
